@@ -1,3 +1,8 @@
+* Nov 29 2000 hship
+
+Add reportException() method to ExceptionAnalyzer, and change AbstractApplication
+to invoke it (intead of doing the work itself).
+
 * Nov 22 2000 hship
 
 Add the InsertText component.
